<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/top_live"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/refresh"
            android:layout_width="32.5dip"
            android:layout_height="27.5dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:background="@drawable/refresh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="赛事数据" />

    </RelativeLayout>    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="59dip"
        android:background="@drawable/data_top_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="33dip"
            android:layout_height="33dip"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/date"
            android:layout_marginRight="40dp"
            android:src="@drawable/h_1" />

        <TextView
            android:id="@+id/homeName"
            android:layout_width="wrap_content"
            android:layout_height="22dip"
            android:gravity="right"
            android:layout_below="@+id/homeImage"
            android:layout_toLeftOf="@+id/homeLeague"
            android:layout_alignBaseline="@+id/awayName"
            android:textColor="@color/black"
            android:singleLine="true"
            android:text="巴黎圣日耳曼" />
        
        <TextView
             android:id="@+id/homeLeague"
             android:layout_width="wrap_content"
             android:layout_height="13dip"
             android:layout_below="@+id/homeImage"
             android:layout_marginRight="20dp"
             android:layout_toLeftOf="@+id/date"
             android:layout_alignBaseline="@+id/awayName"
             android:gravity="left"
             android:text="[法甲2]"
             android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="9sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="56dip"
            android:layout_height="30dip"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:text="0 : 1" 
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="60dip"
            android:layout_height="11dip"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/score"
            android:gravity="center"
            android:text="01/08 13:00"
            android:textColor="@color/black"
            android:textSize="10sp" />
        
        <TextView
            android:id="@+id/status"
            android:layout_width="56dip"
            android:layout_height="15dip"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/date"
            android:text="下半场"
            android:textColor="@color/black"
            android:paddingTop="2dip"
            android:textSize="10sp" />
        
        <ImageView
            android:id="@+id/awayImage"
            android:layout_width="33dip"
            android:layout_height="33dip"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/date"
            android:layout_marginLeft="40dp"
            android:src="@drawable/h_2" />

        <TextView
            android:id="@+id/awayName"
            android:layout_width="wrap_content"
            android:layout_height="22dip"
            android:gravity="right"
            android:layout_below="@+id/awayImage"
            android:layout_toRightOf="@+id/date"
            android:layout_marginLeft="20dip"
            android:textColor="@color/black"
            android:singleLine="true"
            android:text="切尔西" />

         <TextView
             android:id="@+id/awayLeague"
             android:layout_width="wrap_content"
             android:layout_height="13dip"
             android:layout_alignBaseline="@+id/awayName"
             android:layout_below="@+id/awayImage"
             android:layout_toRightOf="@+id/awayName"
             android:gravity="left"
             android:text="[英超1]"
             android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="9sp" />

         <ImageView
             android:id="@+id/vsImage"
             android:layout_width="33dip"
             android:layout_height="33dip"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:visibility="gone"
             android:src="@drawable/vs" />
         

    </RelativeLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TableRow>

                <Button
                    android:id="@+id/btnEvent"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/realtime_match_detail_button"
                    android:textColor="@drawable/button_color"
                    android:focusable="true"
                    android:text="@string/Event" >
                </Button>

                <Button
                    android:id="@+id/btnLineup"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/realtime_match_detail_button"
                    android:textColor="@drawable/button_color"
                    android:text="@string/Lineup" >
                </Button>

                <Button
                    android:id="@+id/btnAnalysis"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/realtime_match_detail_button"
                    android:textColor="@drawable/button_color"
                    android:text="@string/Analysis" >
                </Button>

                <Button
                    android:id="@+id/btnYapei"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/realtime_match_detail_button"
                    android:textColor="@drawable/button_color"
                    android:text="@string/Yapei" >
                </Button>

                <Button
                    android:id="@+id/btnOupei"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/realtime_match_detail_button"
                    android:textColor="@drawable/button_color"
                    android:text="@string/Oupei" >
                </Button>

                <Button
                    android:id="@+id/btnOverunder"
                    android:layout_width="1dip"
                    android:layout_height="wrap_content"
                    android:background="@drawable/realtime_match_detail_button"
                    android:textColor="@drawable/button_color"
                    android:text="@string/Overunder" >
                </Button>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/matchView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>